src/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
:root {
  --background-body: #292929;
  --background-content: #1d1d1d;
  --text-color: #e5e5e5;
  --highlight-color: #04aa6d;
  --navbar-height: 2.9rem;
  --title-video-height: 70vh;
  --min-width: 300px;
  --edge-gap: 5%;
}

body {
  margin: 0;
  font-size: 100%;
  font-family: "Roboto", sans-serif;
  background: var(--background-body);
  color: var(--text-color);
}

/* Global */
a {
  color: var(--highlight-color);
}

.content {
  padding: 0% var(--edge-gap) 2% var(--edge-gap);
  text-align: center;
}

.text-boxes {
  display: flex;
  justify-content: space-evenly;
  align-items: stretch;
  flex-wrap: wrap;
}

.text-boxes div {
  width: 35%;
  min-width: var(--min-width);
  background-color: var(--background-content);
  border-radius: 20px;
  margin: 2.5%;
  padding: 5%;
  text-align: left;
}

.text-boxes h3 {
  margin: 0;
}

table {
  width: 100%;
  border-collapse: collapse;
  border: 3px solid;
}

th {
  border: 3px solid;
}

td {
  border-left: 3px solid;
  padding: 1%;
}

/* use at the top of pages to space out the header */
.header-padding {
  width: 100%;
  height: var(--navbar-height);
}

/* header */
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: var(--background-content);
  z-index: 10;
}

.navbar a {
  float: left;
  display: block;
  color: var(--text-color);
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.navbar a:hover {
  background-color: var(--background-body);
  border: var(--highlight-color);
  border-style: solid;
}

.navbar a.active {
  background-color: var(--highlight-color);
  border: var(--highlight-color);
  border-style: solid;
}

.navbar .icon {
  display: none;
  border: var(--background-content);
  border-style: solid;
}

@media screen and (max-width: 600px) {
  .navbar a:not(:first-child) {
    display: none;
  }
  .navbar a.icon {
    float: right;
    display: block;
  }
  .navbar.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
    background-color: var(--background-body);
    border: var(--highlight-color);
    border-style: solid;
  }
  .navbar.responsive a {
    float: none;
    display: block;
    text-align: left;
    border: var(--background-content);
    border-style: solid;
  }
  .navbar a:hover {
    background-color: var(--background-body);
    border: var(--highlight-color);
    border-style: solid;
  }
  .navbar a.active {
    background-color: var(--highlight-color);
    border: var(--highlight-color);
    border-style: solid;
  }
}

/* Home */
#video-section {
  width: 100%;
  height: var(--title-video-height);
}

#video-section video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#title {
  position: absolute;
  width: 100%;
  height: var(--title-video-height);
  top: var(--navbar-height);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.4);
}

#title h1 {
  padding: 0 5% 0 5%;
}

#title img {
  padding: 5%;
  width: 100%;
  max-width: 700px;
}

/* Features */
#features-content {
  width: 100%;
  display: flex;
  flex-direction: column;
  text-align: left;
}

.features {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap-reverse;
  padding: var(--edge-gap) 0% var(--edge-gap) 0%;
  background-color: var(--background-content);
  border-radius: 20px;
}

.opposite {
  flex-wrap: wrap;
  background-color: var(--background-body);
}

.features-item {
  width: 45%;
  min-width: var(--min-width);
}

.features img {
  margin: 0;
  padding: 0;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

/* Team */
.team {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: flex-end;
  flex-wrap: wrap-reverse;
}

.team .image-container {
  width: 40%;
  margin-top: var(--edge-gap);
  min-width: var(--min-width);
}

.team .image-container img {
  width: 45%;
  border-radius: 20px;
  margin: 2.5%;
}

.team .text-container {
  width: 40%;
  min-width: var(--min-width);
  padding: 2.5%;
}

/* Blog */
#blog-list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.blog-summary {
  width: 20%;
  min-width: var(--min-width);
  background-color: var(--background-content);
  border-radius: 20px;
  margin: 1%;
  padding: 2.5%;
  text-align: left;
}

.blog-summary h3 {
  margin: 4% 0 0 0;
}

.blog-summary img {
  width: 100%;
  height: 30%;
}

.blog-summary a {
  border-style: solid;
  margin: 0 26.5% 0 26.5%;
  width: 40%;
}

.blog-summary a:link,
a:visited {
  background-color: var(--highlight-color);
  color: var(--text-color);
  padding: 3%;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  border-color: var(--highlight-color);
}

.blog-summary a:hover,
a:active {
  color: var(--highlight-color);
  background-color: var(--background-body);
  border-color: var(--highlight-color);
  border-style: solid;
}

/* Blog Post */
.article {
  margin: 4rem 0;
}

.article img {
  width: 100%;
  border-radius: 20px;
}

.post-wrapper {
  width: 100%;
}

.container {
  max-width: 50rem;
  margin: 0 auto;
  padding: 0 0.5rem 0 0.5rem;
  display: flex;
  align-items: center;
  height: 100%;
}

.back-button {
  position: fixed;
  padding: 1%;
  bottom: 30px;
  right: 40px;
  background-color: var(--highlight-color);
  text-align: center;
  text-decoration: none;
  border-style: solid;
}

.back-button:hover {
  color: var(--highlight-color);
  background-color: var(--background-content);
  border-color: var(--highlight-color);
  border-style: solid;
}

